traefik-curcuit-breaker/traefik/traefik-midl.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: curcuit-breaker
spec:
  circuitBreaker:
    expression: ResponseCodeRatio(500, 600, 0, 600) > 0.25
